# src/main/kotlin/no/nav/tpt/routes/ConfigRoutes.kt
@@ -3,8 +3,12 @@ package no.nav.tpt.routes
 import io.ktor.server.response.*
 import io.ktor.server.routing.*
 import no.nav.tpt.domain.ConfigResponse
+import no.nav.tpt.domain.RiskScoringCategories
 import no.nav.tpt.domain.RiskThresholds
+import no.nav.tpt.domain.risk.RiskScoringConfig
 import no.nav.tpt.plugins.dependencies
+
+private val defaultScoringConfig = RiskScoringConfig()
 
 fun Route.configRoutes() {
     get("/config") {
@@ -14,6 +18,16 @@ fun Route.configRoutes() {
                 high = appConfig.riskThresholdHigh,
                 medium = appConfig.riskThresholdMedium,
                 low = appConfig.riskThresholdLow
+            ),
+            scoring = RiskScoringCategories(
+                severityMax = defaultScoringConfig.severityCriticalPoints,
+                exploitationMax = defaultScoringConfig.exploitationActivePoints,
+                exposureMax = defaultScoringConfig.exposureExternalPoints,
+                environmentMax = defaultScoringConfig.environmentProductionPoints +
+                        defaultScoringConfig.environmentOldBuildBonus +
+                        defaultScoringConfig.environmentChronicCveBonus,
+                actionabilityMax = defaultScoringConfig.actionabilityPatchAvailablePoints +
+                        defaultScoringConfig.actionabilityRansomwarePoints,
             ),
             aiEnabled = call.dependencies.remediationService != null
         )
